--- a/ToDoApi/appsettings.Development.json
+++ b/ToDoApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+    "ConnectionStrings": {
+    "ToDoApiDbContext": "Data Source=ToDoApi.db"
   }
 }
